--- a/step.yml
+++ b/step.yml
@@ -39,52 +39,33 @@ support_url: https://github.com/apanyok/bitrise-step-get-build-number-and-ic/iss
 # Type tags are used for categorizing steps, for easier step discovery in Step Libraries.
 # You can find more information about type tags in the Step Development Guideline:
 # https://github.com/bitrise-io/bitrise/blob/master/_docs/step-development-guideline.md
-type_tags:
-  - artifact-info
+is_requires_admin_user: false
+is_always_run: false
+is_skippable: false
+run_if: ""
 
-# These properties define whether a Step is run in a given Workflow or not.
-# You can find more information about this in the documentation here:
-# https://devcenter.bitrise.io/en/steps-and-workflows/developing-your-own-bitrise-step/developing-a-new-step.html#setting-conditions-for-running-the-step
-#
-# is_always_run: false
-# is_skippable: false
-# run_if: ""
-
-# Use the `deps` property to declare dependencies that you can fetch from an OS dependency manager.
-# You can find more information about this in the documentation here:
-# https://devcenter.bitrise.io/en/steps-and-workflows/developing-your-own-bitrise-step/developing-a-new-step.html#submodules-and-step-dependencies
-#
-# deps:
-#   brew:
-#   - name: cmake
-#   apt_get:
-#   - name: cmake
-
-
+deps:
 toolkit:
   bash:
     entry_file: step.sh
 
-
 inputs:
-  - example_step_input: Default Value - you can leave this empty if you want to
+  - pubspec_path: "$BITRISE_SOURCE_DIR/pubspec.yaml"
     opts:
-      title: "Example Step Input"
-      summary: Summary. No more than 2-3 sentences.
-      description: |
-        Description of this input.
-
-        Can be Markdown formatted text.
+      title: "Path to pubspec.yaml"
       is_expand: true
       is_required: true
-      value_options: []
 
 outputs:
-  - EXAMPLE_STEP_OUTPUT:
+  - PUBSPEC_VERSION:
     opts:
-      title: "Example Step Output"
-      summary: Summary. No more than 2-3 sentences.
-      description: |
-        Description of this output.
-
-        Can be Markdown formatted text.
+      title: "Value of the `version` attribute in the pubspec.yml"
+      summary: "Example: `1.2.43+10`"
+  - PUBSPEC_VERSION_NAME:
+    opts:
+      title: "Part before the `+` in the `PUBSPEC_VERSION`"
+      summary: "Example: `1.2.43`"
+  - PUBSPEC_BUILD_NUMBER:
+    opts:
+      title: "Part after the `+` in the `PUBSPEC_VERSION`"
+      summary: "Example: `10`"
